--- a/py-op/Cargo.toml
+++ b/py-op/Cargo.toml
@@ -18,6 +18,7 @@ readme = "README.md"
 zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
 zenoh-flow-python-types = {path = "../zenoh-flow-python-types/"}
 pyo3 = "0.14.5"
+log = "0.4"
 
 [lib]
 name = "py_op"
