--- a/zenoh-flow-python/setup.cfg
+++ b/zenoh-flow-python/setup.cfg
@@ -1,4 +1,3 @@
-#
 # Copyright (c) 2017, 2020 ADLINK Technology Inc.
 #
 # This program and the accompanying materials are made available under the
@@ -9,8 +8,7 @@
 # SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
 #
 # Contributors:
-#   ADLINK zenoh team, <zenoh@adlink-labs.tech>
-#
 
-[build-system]
-requires = ["setuptools", "wheel", "setuptools-rust"]
+# As PyO3 is configured with "abi3-py36" feature for stable ABI, we can make the wheel reflect it:
+[bdist_wheel]
+py-limited-api = cp36
