--- a/loader-config.yml
+++ b/loader-config.yml
@@ -1,7 +1,7 @@
 extensions:
   - name: python
     file_extension: py
-    source_lib: ./target/debug/libpy_source.dylib
-    sink_lib: ./target/debug/libpy_sink.dylib
-    operator_lib: ./target/debug/libpy_op.dylib
+    source_lib: ./target/debug/libpy_source.so
+    sink_lib: ./target/debug/libpy_sink.so
+    operator_lib: ./target/debug/libpy_op.so
     config_lib_key: python-script
