--- a/py-op/Cargo.toml
+++ b/py-op/Cargo.toml
@@ -17,8 +17,13 @@ readme = "README.md"
 [dependencies]
 zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
 zenoh-flow-python-types = {path = "../zenoh-flow-python-types/"}
-pyo3 = "0.14.5"
+pyo3 = "0.15"
 log = "0.4"
+
+
+[features]
+abi-py36 = ["pyo3/abi3-py36"]
+default = ["abi-py36"]
 
 [lib]
 name = "py_op"
