--- a/py-sink/Cargo.toml
+++ b/py-sink/Cargo.toml
@@ -10,8 +10,12 @@ edition = "2018"
 zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
 async-trait = "0.1"
 zenoh-flow-python-types = {path = "../zenoh-flow-python-types/"}
-pyo3 = "0.14.5"
+pyo3 = "0.15"
 
+
+[features]
+abi-py36 = ["pyo3/abi3-py36"]
+default = ["abi-py36"]
 
 [lib]
 name = "py_sink"
