--- a/py-sink/Cargo.toml
+++ b/py-sink/Cargo.toml
@@ -11,7 +11,10 @@ zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch =
 async-trait = "0.1"
 zenoh-flow-python-types = {path = "../zenoh-flow-python-types/"}
 pyo3 = "0.15"
+libloading = "0.7"
 
+[build-dependencies]
+pyo3-build-config = {version = "0.15", features = ["resolve-config"]}
 
 [features]
 abi-py36 = ["pyo3/abi3-py36"]
