--- a/py-source/Cargo.toml
+++ b/py-source/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "py-source"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 
-zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
+zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", tag = "0.2.0"}
 async-trait = "0.1"
 zenoh-flow-python-types = {path = "../zenoh-flow-python-types/"}
 pyo3 = "0.15"
