--- a/zenoh-flow-python-types/Cargo.toml
+++ b/zenoh-flow-python-types/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "zenoh-flow-python-types"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }
+zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", tag = "0.2.0" }
 uhlc = "0.4"
 pyo3 = "0.15"
 
