--- a/zenoh-flow-python/setup.cfg
+++ b/zenoh-flow-python/setup.cfg
@@ -12,24 +12,6 @@
 #   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
 #
 
-[workspace]
-
-members = [
-  #"zenoh-flow-python",
-  "zenoh-flow-python-types",
-  "py-source",
-  "py-sink",
-  "py-op",
-]
-
-[profile.dev]
-debug=true
-opt-level = 0
-
-
-[profile.release]
-debug=true
-lto="fat"
-codegen-units=1
-opt-level=3
-panic="abort"
+# As PyO3 is configured with "abi3-py37" feature for stable ABI, we can make the wheel reflect it:
+[bdist_wheel]
+py-limited-api = cp37
