--- a/zenoh-flow-python-types/Cargo.toml
+++ b/zenoh-flow-python-types/Cargo.toml
@@ -23,7 +23,7 @@ edition = "2018"
 zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }
 uhlc = "0.4"
 pyo3 = "0.16"
-
+uuid = "0.8.2"
 
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
