rename zenoh-flow-python-types to zenoh-flow-python-common, added examples, update readme
Signed-off-by: gabrik <gabriele.baldoni@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,7 @@
 [workspace]
 
 members = [
-  #"zenoh-flow-python",
-  "zenoh-flow-python-types",
+  "zenoh-flow-python-common",
   "py-source",
   "py-sink",
   "py-op",
