--- a/py-sink/Cargo.toml
+++ b/py-sink/Cargo.toml
@@ -23,7 +23,7 @@ edition = "2018"
 
 zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
 async-trait = "0.1"
-zenoh-flow-python-types = {path = "../zenoh-flow-python-types/"}
+zenoh-flow-python-common = {path = "../zenoh-flow-python-common/"}
 pyo3 = "0.16"
 libloading = "0.7"
 log = "0.4"
