--- a/py-sink/Cargo.toml
+++ b/py-sink/Cargo.toml
@@ -14,14 +14,11 @@
 
 [package]
 name = "py-sink"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-
-zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
+zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", tag = "v0.3.0" }
 async-trait = "0.1"
 zenoh-flow-python-types = {path = "../zenoh-flow-python-types/"}
 pyo3 = "0.16"
