--- a/zenoh-flow-python/Cargo.toml
+++ b/zenoh-flow-python/Cargo.toml
@@ -14,20 +14,17 @@
 
 [package]
 name = "zenoh-flow-python"
-version = "0.2.0"
+version = "0.3.0"
 repository = "https://github.com/atolab/zenoh-flow-python"
 homepage = "http://zenoh.io"
 authors = ["kydos <angelo@icorsaro.net>",
            "gabrik <gabriele.baldoni@gmail.com>",
-           "Julien Loudet <julien.loudet@adlinktech.com>",]
+           "Julien Loudet <julien.loudet@zettascale.tech>",]
 edition = "2018"
 license = " EPL-2.0 OR Apache-2.0"
 categories = ["network-programming"]
 description = "Zenoh-Flow: zenoh-based data-flow programming framework for computations that span from the cloud to the device."
 readme = "../README.md"
-
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 zenoh-flow-python-types = { path = "../zenoh-flow-python-types"}
