--- a/zenoh-flow-python-common/Cargo.toml
+++ b/zenoh-flow-python-common/Cargo.toml
@@ -20,11 +20,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }
-uhlc = "0.4"
+zenoh-flow = { git = "https://github.com/ZettaScaleLabs/zenoh-flow.git", branch = "dev/v0.4.0"}
+uhlc = "0.5"
 pyo3 = "0.16"
-uuid = "0.8.2"
-
+pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
+uuid = "1.1"
+flume = "0.10"
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
 default = ["abi-py37"]
