WIP: new Python API, following Python style
Signed-off-by: gabrik <gabriele.baldoni@gmail.com>

--- a/zenoh-flow-python/examples/py-sink.yml
+++ b/zenoh-flow-python/examples/py-sink.yml
@@ -1,6 +1,6 @@
 id: PySink
 uri: file://./zenoh-flow-python/examples/sink.py
-input:
-  id: Value
-  type: usize
+inputs:
+  - id: Value
+    type: usize
 tags: []
