--- a/zenoh-flow-python-common/Cargo.toml
+++ b/zenoh-flow-python-common/Cargo.toml
@@ -26,7 +26,7 @@ pyo3 = "0.16"
 pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
 uhlc = "0.5"
 uuid = "1.1"
-zenoh-flow = { git = "https://github.com/ZettaScaleLabs/zenoh-flow.git", branch = "dev/v0.4.0" }
+zenoh-flow = "0.4.0"
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
 default = ["abi-py37"]
