fix issues with updated APIs, setting rust version to 2018
Signed-off-by: gabrik <gabriele.baldoni@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ debug = true
 opt-level = 0
 
 [profile.release]
-debug = true
+debug = false
 lto = "fat"
 codegen-units = 1
 opt-level = 3
@@ -35,4 +35,4 @@ panic = "abort"
 
 
 [patch.crates-io]
-zenoh-flow = { git = "https://github.com/ZettaScaleLabs/zenoh-flow.git", branch = "v0.4.0"}
+zenoh-flow = { git = "https://github.com/ZettaScaleLabs/zenoh-flow.git", branch = "dev/v0.4.0"}
