--- a/py-op/Cargo.toml
+++ b/py-op/Cargo.toml
@@ -15,17 +15,14 @@
 [package]
 name = "py-op"
 version = "0.4.0"
-repository = "https://github.com/atolab/zenoh-flow-examples"
-homepage = "http://zenoh.io"
-authors = ["kydos <angelo@icorsaro.net>",
-           "gabrik <gabriele.baldoni@gmail.com>",
-           "Julien Loudet <julien.loudet@zettascale.com>",]
-edition = "2018"
-license = " EPL-2.0 OR Apache-2.0"
+authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
 categories = ["network-programming"]
-description = "Zenoh Flow Examples"
+description = "Zenoh-Flow Python Operator wrapper"
+edition = "2018"
+homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
+license = " EPL-2.0 OR Apache-2.0"
 readme = "README.md"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
 
 [dependencies]
 async-trait = "0.1"
@@ -34,7 +31,7 @@ log = "0.4"
 pyo3 = "0.16"
 pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
 zenoh-flow = "0.4.0"
-zenoh-flow-python-common = { path = "../zenoh-flow-python-common/" }
+zenoh-flow-python-commons = { version = "0.4.0", path = "../zenoh-flow-python-commons/" }
 
 [build-dependencies]
 pyo3-build-config = { version = "0.17", features = ["resolve-config"] }
