--- a/zenoh-flow-python-commons/Cargo.toml
+++ b/zenoh-flow-python-commons/Cargo.toml
@@ -13,10 +13,16 @@
 #
 
 [package]
-name = "zenoh-flow-python-common"
+name = "zenoh-flow-python-commons"
 version = "0.4.0"
+authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
+categories = ["network-programming", "api-bindings"]
+description = "Zenoh-Flow Python common types and utility functions."
 edition = "2018"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
+license = " EPL-2.0 OR Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
 
 [dependencies]
 async-std = { version = "=1.12.0", features = ["attributes"] }
