--- a/zenoh-flow-python/Cargo.toml
+++ b/zenoh-flow-python/Cargo.toml
@@ -1,12 +1,19 @@
 [package]
 name = "zenoh-flow-python"
 version = "0.4.0"
+authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
+categories = ["network-programming", "api-bindings"]
+description = "Zenoh-Flow  Python APIs"
 edition = "2018"
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
+license = " EPL-2.0 OR Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
+
 
 [dependencies]
 pyo3 = "0.16"
-zenoh-flow-python-common = { path = "../zenoh-flow-python-common/" }
+zenoh-flow-python-commons = { version = "0.4.0", path = "../zenoh-flow-python-commons/" }
 
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
