--- a/zenoh-flow-python-sink-wrapper/Cargo.toml
+++ b/zenoh-flow-python-sink-wrapper/Cargo.toml
@@ -13,11 +13,11 @@
 #
 
 [package]
-name = "py-op"
+name = "zenoh-flow-python-sink-wrapper"
 version = "0.4.0"
 authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
 categories = ["network-programming"]
-description = "Zenoh-Flow Python Operator wrapper"
+description = "Zenoh-Flow Python Sink wrapper"
 edition = "2018"
 homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
 license = " EPL-2.0 OR Apache-2.0"
@@ -30,17 +30,26 @@ libloading = "0.7"
 log = "0.4"
 pyo3 = "0.16"
 pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
+
 zenoh-flow = "0.4.0"
 zenoh-flow-python-commons = { version = "0.4.0", path = "../zenoh-flow-python-commons/" }
 
 [build-dependencies]
-pyo3-build-config = { version = "0.17", features = ["resolve-config"] }
+pyo3-build-config = { version = "0.16", features = ["resolve-config"] }
 
 [features]
 abi-py37 = ["pyo3/abi3-py37"]
 default = ["abi-py37"]
 
 [lib]
-name = "py_op"
+name = "zenoh_flow_python_sink_wrapper"
 crate-type =["cdylib"]
 path = "src/lib.rs"
+
+[package.metadata.deb]
+name = "zenoh-flow-python-sink-wrapper"
+maintainer = "zenoh-dev@eclipse.org"
+copyright = "2017, 2022 ZettaScale Technology Inc."
+section = "libraries"
+license-file = ["../LICENSE", "0"]
+depends = "$auto, zenoh-flow-daemon (= 0.4.0 )"
