--- a/zenoh-flow-python-source-wrapper/Cargo.toml
+++ b/zenoh-flow-python-source-wrapper/Cargo.toml
@@ -13,11 +13,11 @@
 #
 
 [package]
-name = "py-sink"
+name = "zenoh-flow-python-source-wrapper"
 version = "0.4.0"
 authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
 categories = ["network-programming"]
-description = "Zenoh-Flow Python Sink wrapper"
+description = "Zenoh-Flow Python Source wrapper"
 edition = "2018"
 homepage = "https://github.com/ZettaScaleLabs/zenoh-flow-python"
 license = " EPL-2.0 OR Apache-2.0"
@@ -42,6 +42,14 @@ abi-py37 = ["pyo3/abi3-py37"]
 default = ["abi-py37"]
 
 [lib]
-name = "py_sink"
+name = "zenoh_flow_python_source_wrapper"
 crate-type =["cdylib"]
 path = "src/lib.rs"
+
+[package.metadata.deb]
+name = "zenoh-flow-python-source-wrapper"
+maintainer = "zenoh-dev@eclipse.org"
+copyright = "2017, 2022 ZettaScale Technology Inc."
+section = "libraries"
+license-file = ["../LICENSE", "0"]
+depends = "$auto, zenoh-flow-daemon (= 0.4.0 )"
