--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -5,9 +5,9 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches: ["master", "wip/0.4"]
   pull_request:
-    branches: [master]
+    branches: ["master", "wip/0.4"]
   schedule:
     - cron: "0 6 * * 1-5"
   workflow_dispatch:
@@ -56,7 +56,7 @@ jobs:
           args: --release -p zenoh-flow-python-source-wrapper -p zenoh-flow-python-sink-wrapper -p zenoh-flow-python-operator-wrapper
 
       - name: Build zenoh-flow-python
-        uses: messense/maturin-action@v1
+        uses: PyO3/maturin-action@v1
         with:
           args: --release -m zenoh-flow-python/Cargo.toml
 
