--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -158,30 +158,30 @@ jobs:
               os: ubuntu-20.04,
               use-cross: true,
             }
-          - {
-              target: arm-unknown-linux-gnueabi,
-              arch: armel,
-              os: ubuntu-20.04,
-              use-cross: true,
-            }
-          - {
-              target: arm-unknown-linux-gnueabihf,
-              arch: armhf,
-              os: ubuntu-20.04,
-              use-cross: true,
-            }
-          - {
-              target: armv7-unknown-linux-gnueabihf,
-              arch: armhf,
-              os: ubuntu-20.04,
-              use-cross: true,
-            }
-          - {
-              target: aarch64-unknown-linux-gnu,
-              arch: arm64,
-              os: ubuntu-20.04,
-              use-cross: true,
-            }
+          # - {
+          #     target: arm-unknown-linux-gnueabi,
+          #     arch: armel,
+          #     os: ubuntu-20.04,
+          #     use-cross: true,
+          #   }
+          # - {
+          #     target: arm-unknown-linux-gnueabihf,
+          #     arch: armhf,
+          #     os: ubuntu-20.04,
+          #     use-cross: true,
+          #   }
+          # - {
+          #     target: armv7-unknown-linux-gnueabihf,
+          #     arch: armhf,
+          #     os: ubuntu-20.04,
+          #     use-cross: true,
+          #   }
+          # - {
+          #     target: aarch64-unknown-linux-gnu,
+          #     arch: arm64,
+          #     os: ubuntu-20.04,
+          #     use-cross: true,
+          # }
           - { target: x86_64-unknown-linux-gnu, arch: amd64, os: ubuntu-18.04 }
           - {
               target: x86_64-unknown-linux-musl,
@@ -189,30 +189,30 @@ jobs:
               os: ubuntu-18.04,
               use-cross: true,
             }
-          - {
-              target: arm-unknown-linux-gnueabi,
-              arch: armel,
-              os: ubuntu-18.04,
-              use-cross: true,
-            }
-          - {
-              target: arm-unknown-linux-gnueabihf,
-              arch: armhf,
-              os: ubuntu-18.04,
-              use-cross: true,
-            }
-          - {
-              target: armv7-unknown-linux-gnueabihf,
-              arch: armhf,
-              os: ubuntu-18.04,
-              use-cross: true,
-            }
-          - {
-              target: aarch64-unknown-linux-gnu,
-              arch: arm64,
-              os: ubuntu-18.04,
-              use-cross: true,
-            }
+          # - {
+          #     target: arm-unknown-linux-gnueabi,
+          #     arch: armel,
+          #     os: ubuntu-18.04,
+          #     use-cross: true,
+          #   }
+          # - {
+          #     target: arm-unknown-linux-gnueabihf,
+          #     arch: armhf,
+          #     os: ubuntu-18.04,
+          #     use-cross: true,
+          #   }
+          # - {
+          #     target: armv7-unknown-linux-gnueabihf,
+          #     arch: armhf,
+          #     os: ubuntu-18.04,
+          #     use-cross: true,
+          #   }
+          # - {
+          #     target: aarch64-unknown-linux-gnu,
+          #     arch: arm64,
+          #     os: ubuntu-18.04,
+          #     use-cross: true,
+          #   }
           - { target: x86_64-apple-darwin, arch: darwin, os: macos-10.15 }
           # - { target: x86_64-pc-windows-msvc, arch: win64, os: windows-2019 }
           # - { target: x86_64-pc-windows-gnu         , arch: win64 , os: windows-2019                  }
@@ -229,19 +229,17 @@ jobs:
           esac
           case ${{ matrix.job.target }} in
             arm-unknown-linux-gnueabi)
-              sudo dpkg --add-architecture armhf
               sudo apt-get -y update
-              sudo apt-get -y install gcc-arm-linux-gnueabi libssl-dev libpython3-dev:armhf
+              sudo apt-get -y install gcc-arm-linux-gnueabi libssl-dev
               ;;
             arm*-unknown-linux-gnueabihf)
-              sudo dpkg --add-architecture armhf
               sudo apt-get -y update
-              sudo apt-get -y install gcc-arm-linux-gnueabihf libssl-dev libpython3-dev:armhf
+              sudo apt-get -y install gcc-arm-linux-gnueabihf libssl-dev
               ;;
             aarch64-unknown-linux-gnu)
               sudo dpkg --add-architecture arm64
               sudo apt-get -y update
-              sudo apt-get -y install gcc-aarch64-linux-gnu libssl-dev libpython3-dev:arm64
+              sudo apt-get -y install gcc-aarch64-linux-gnu libssl-dev
               ;;
           esac
       - name: Set up Python 3.7
