--- a/zenoh-flow-python-source-wrapper/Cargo.toml
+++ b/zenoh-flow-python-source-wrapper/Cargo.toml
@@ -14,7 +14,7 @@
 
 [package]
 name = "zenoh-flow-python-source-wrapper"
-version = "0.4.0"
+version = "0.4.0-alpha.1"
 authors = ["ZettaScale Zenoh Team <zenoh@zettascale.tech>"]
 categories = ["network-programming"]
 description = "Zenoh-Flow Python Source wrapper"
@@ -31,8 +31,8 @@ log = "0.4"
 pyo3 = "0.16"
 pyo3-asyncio = { version = "0.16", features = ["attributes", "async-std-runtime"] }
 
-zenoh-flow = "0.4.0"
-zenoh-flow-python-commons = { version = "0.4.0", path = "../zenoh-flow-python-commons/" }
+zenoh-flow = "=0.4.0-alpha.1"
+zenoh-flow-python-commons = { version =  "=0.4.0-alpha.1", path = "../zenoh-flow-python-commons/" }
 
 [build-dependencies]
 pyo3-build-config = { version = "0.16", features = ["resolve-config"] }
@@ -52,4 +52,4 @@ maintainer = "zenoh-dev@eclipse.org"
 copyright = "2017, 2022 ZettaScale Technology Inc."
 section = "libraries"
 license-file = ["../LICENSE", "0"]
-depends = "$auto, zenoh-flow-daemon (= 0.4.0 )"
+depends = "$auto, zenoh-flow-daemon (= 0.4.0~alpha.1 )"
