--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,53 @@ on:
   workflow_dispatch:
 
 jobs:
+  checks:
+    name: Code checks
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          components: rustfmt, clippy
+      - name: Environment setup
+        id: env
+        shell: bash
+        run: |
+          # log some info
+          gcc --version || true
+          rustup -V
+          rustup toolchain list
+          rustup default
+          cargo -V
+          rustc -V
+          echo "GITHUB_REF=${GITHUB_REF}"
+          echo "GITHUB_SHA=${GITHUB_SHA:0:8}"
+          GIT_BRANCH=`[[ $GITHUB_REF =~ ^refs/heads/.* ]] && echo ${GITHUB_REF/refs\/heads\//} || true`
+          echo "GIT_BRANCH=${GIT_BRANCH}" >> $GITHUB_OUTPUT
+          GIT_TAG=`[[ $GITHUB_REF =~ ^refs/tags/.* ]] && echo ${GITHUB_REF/refs\/tags\//} || true`
+          echo "GIT_TAG=${GIT_TAG}" >> $GITHUB_OUTPUT
+          ZENOH_FLOW_VERSION=$(sed -n 's/^version = "\(.*\)"/\1/p' Cargo.toml | head -n1)
+          echo "ZENOH_FLOW_VERSION=${ZENOH_FLOW_VERSION}" >> $GITHUB_OUTPUT
+          if [ -n "${GIT_TAG}" ]; then
+            IS_RELEASE="true"
+            echo "IS_RELEASE=${IS_RELEASE}" >> $GITHUB_OUTPUT
+            PKG_VERSION=${ZENOH_FLOW_VERSION}
+          elif [ -n "${GIT_BRANCH}" ]; then
+            PKG_VERSION=${GIT_BRANCH}-${GITHUB_SHA:0:8}
+          else
+            PKG_VERSION=${ZENOH_FLOW_VERSION}-${GITHUB_SHA:0:8}
+          fi
+          echo "PKG_VERSION=${PKG_VERSION}" >> $GITHUB_OUTPUT
+    outputs:
+      GIT_BRANCH: ${{ steps.env.outputs.GIT_BRANCH }}
+      GIT_TAG: ${{ steps.env.outputs.GIT_TAG }}
+      IS_RELEASE: ${{ steps.env.outputs.IS_RELEASE }}
+      ZENOH_FLOW_VERSION: ${{ steps.env.outputs.ZENOH_FLOW_VERSION }}
+      PKG_VERSION: ${{ steps.env.outputs.PKG_VERSION }}
+
+
+
   linux-python:
     runs-on: ubuntu-latest
     strategy:
@@ -146,76 +193,16 @@ jobs:
 
   builds:
     name: Build for ${{ matrix.job.target }} on ${{ matrix.job.os }}
+    needs: [checks]
     runs-on: ${{ matrix.job.os }}
     strategy:
       fail-fast: false
       matrix:
         job:
+          - { target: x86_64-unknown-linux-gnu, arch: amd64, os: ubuntu-22.04 }
           - { target: x86_64-unknown-linux-gnu, arch: amd64, os: ubuntu-20.04 }
-          # - {
-          #     target: x86_64-unknown-linux-musl,
-          #     arch: amd64,
-          #     os: ubuntu-20.04,
-          #     use-cross: true,
-          #   }
-          # - {
-          #     target: arm-unknown-linux-gnueabi,
-          #     arch: armel,
-          #     os: ubuntu-20.04,
-          #     use-cross: true,
-          #   }
-          # - {
-          #     target: arm-unknown-linux-gnueabihf,
-          #     arch: armhf,
-          #     os: ubuntu-20.04,
-          #     use-cross: true,
-          #   }
-          # - {
-          #     target: armv7-unknown-linux-gnueabihf,
-          #     arch: armhf,
-          #     os: ubuntu-20.04,
-          #     use-cross: true,
-          #   }
-          # - {
-          #     target: aarch64-unknown-linux-gnu,
-          #     arch: arm64,
-          #     os: ubuntu-20.04,
-          #     use-cross: true,
-          # }
           - { target: x86_64-unknown-linux-gnu, arch: amd64, os: ubuntu-18.04 }
-          # - {
-          #     target: x86_64-unknown-linux-musl,
-          #     arch: amd64,
-          #     os: ubuntu-18.04,
-          #     use-cross: true,
-          #   }
-          # - {
-          #     target: arm-unknown-linux-gnueabi,
-          #     arch: armel,
-          #     os: ubuntu-18.04,
-          #     use-cross: true,
-          #   }
-          # - {
-          #     target: arm-unknown-linux-gnueabihf,
-          #     arch: armhf,
-          #     os: ubuntu-18.04,
-          #     use-cross: true,
-          #   }
-          # - {
-          #     target: armv7-unknown-linux-gnueabihf,
-          #     arch: armhf,
-          #     os: ubuntu-18.04,
-          #     use-cross: true,
-          #   }
-          # - {
-          #     target: aarch64-unknown-linux-gnu,
-          #     arch: arm64,
-          #     os: ubuntu-18.04,
-          #     use-cross: true,
-          #   }
           - { target: x86_64-apple-darwin, arch: darwin, os: macos-10.15 }
-          # - { target: x86_64-pc-windows-msvc, arch: win64, os: windows-2019 }
-          # - { target: x86_64-pc-windows-gnu         , arch: win64 , os: windows-2019                  }
     steps:
       - uses: actions/checkout@v2
       - name: Install prerequisites
@@ -224,24 +211,9 @@ jobs:
           case ${{ matrix.job.target }} in
             *-linux-gnu*)
               cargo install cargo-deb
-              sudo apt-get install libpython3-dev
+              sudo apt-get install libpython3-dev equivs
               ;;
           esac
-          # case ${{ matrix.job.target }} in
-          #   arm-unknown-linux-gnueabi)
-          #     sudo apt-get -y update
-          #     sudo apt-get -y install gcc-arm-linux-gnueabi libssl-dev
-          #     ;;
-          #   arm*-unknown-linux-gnueabihf)
-          #     sudo apt-get -y update
-          #     sudo apt-get -y install gcc-arm-linux-gnueabihf libssl-dev
-          #     ;;
-          #   aarch64-unknown-linux-gnu)
-          #     sudo dpkg --add-architecture arm64
-          #     sudo apt-get -y update
-          #     sudo apt-get -y install gcc-aarch64-linux-gnu libssl-dev
-          #     ;;
-          # esac
       - name: Set up Python 3.7
         if: ${{ matrix.job.target }} == 'x86_64-apple-darwin'
         uses: actions/setup-python@v2
@@ -280,17 +252,55 @@ jobs:
           command: deb
           args: --no-build -p zenoh-flow-python-operator-wrapper --target=${{ matrix.job.target }}
 
-  build-metapackage:
-    name: Build meta package
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Install prerequisites
-      shell: bash
-      run: |
-        sudo apt update
-        sudo apt install equivs -y
-    - name: Build metapackage
-      shell: bash
-      run: |
-        equivs-build zenoh-flow-python-extension
+      - name: Build metapackage
+        if: runner.os == 'Linux'
+        shell: bash
+        run: |
+          equivs-build zenoh-flow-python-extension
+
+      - name: Packaging
+        id: package
+        shell: bash
+        run: |
+          TARGET=${{ matrix.job.target }}
+          MAIN_PKG_NAME="${GITHUB_WORKSPACE}/zenoh-flow-python-${{ needs.checks.outputs.PKG_VERSION }}-${TARGET}.zip"
+          DEBS_PKG_NAME="${GITHUB_WORKSPACE}/zenoh-flow-python-${{ needs.checks.outputs.PKG_VERSION }}-${TARGET}-deb-pkgs.zip"
+          case ${TARGET} in
+            *linux*)
+              cd "target/${TARGET}/release/"
+              echo "Packaging ${MAIN_PKG_NAME}:"
+              zip ${MAIN_PKG_NAME} zenohd libzenoh_flow_python_*_wrapper.so
+              cd -
+              echo MAIN_PKG_NAME="${MAIN_PKG_NAME}" >> $GITHUB_OUTPUT
+
+              # check if debian packages has been created and packages them in a single tgz
+              if [[ -d target/${TARGET}/debian ]]; then
+                cd target/${TARGET}/debian
+                echo "Packaging ${DEBS_PKG_NAME}:"
+                zip ${DEBS_PKG_NAME} *.deb
+                cd -
+                # checks if the meta package exists and adds it to the zip
+                if [[ -d zenoh-flow-python_*_all.deb ]]; then
+                  zip -ru ${DEBS_PKG_NAME} zenoh-flow-python_*_all.deb
+                fi
+                echo DEBS_PKG_NAME="${DEBS_PKG_NAME}" >> $GITHUB_OUTPUT
+              fi
+              ;;
+            *apple*)
+              cd "target/${TARGET}/release/"
+              echo "Packaging ${MAIN_PKG_NAME}:"
+              zip ${MAIN_PKG_NAME} zenohd libzenoh_flow_python_*_wrapper.dylib
+              cd -
+              echo MAIN_PKG_NAME="${MAIN_PKG_NAME}" >> $GITHUB_OUTPUT
+              ;;
+          esac
+
+      - name: "Upload packages"
+        uses: actions/upload-artifact@master
+        with:
+          name: ${{ matrix.job.target }}
+          path: |
+            ${{ steps.package.outputs.MAIN_PKG_NAME }}
+            ${{ steps.package.outputs.DEBS_PKG_NAME }}
+
+
