updating installation path for libraries from deb files
Signed-off-by: gabrik <gabriele.baldoni@gmail.com>

--- a/zenoh-flow-python-source-wrapper/Cargo.toml
+++ b/zenoh-flow-python-source-wrapper/Cargo.toml
@@ -53,3 +53,7 @@ copyright = "2017, 2022 ZettaScale Technology Inc."
 section = "libraries"
 license-file = ["../LICENSE", "0"]
 depends = "$auto, zenoh-flow-daemon (= 0.4.0~alpha.1 )"
+assets = [
+    # library
+    ["target/release/libzenoh_flow_python_source_wrapper.so", "/var/zenoh-flow/python/libzenoh_flow_python_source_wrapper.so", "644"],
+]
