updated zenoh-flow dependency and release pipeline
Signed-off-by: gabrik <gabriele.baldoni@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -188,7 +188,7 @@ jobs:
         shell: bash
         run: echo "This should publish on pypi.org"
       # - name: publish
-      #
+      #   if: github.event_name == 'release' && github.event.action == 'published'
       #   uses: pypa/gh-action-pypi-publish@master
       #   with:
       #     user: __token__
