--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,4 @@ panic = "abort"
 
 
 [patch.crates-io]
-zenoh-flow = { git = "https://github.com/ZettaScaleLabs/zenoh-flow.git", branch = "dev/v0.4.0"}
+zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master"}
